# zh_gateway_esp32

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
components/zh_config/: zh_config.c
components/zh_config/include/: zh_config.h
components/zh_espnow/: CMakeLists.txt  zh_espnow.c
components/zh_espnow/include/: zh_espnow.h
components/zh_eth/: CMakeLists.txt  zh_eth.c
components/zh_eth/include/: zh_eth.h
components/zh_json/: CMakeLists.txt  zh_json.c
components/zh_json/include/: zh_json.h
components/zh_mqtt/: CMakeLists.txt  zh_mqtt.c
components/zh_mqtt/include/: zh_mqtt.h
components/zh_ota/: CMakeLists.txt  zh_ota.c
components/zh_ota/include/: zh_ota.h
components/zh_sntp/: CMakeLists.txt  zh_sntp.c
components/zh_sntp/include/: zh_sntp.h
components/zh_wifi/: CMakeLists.txt  zh_wifi.c
components/zh_wifi/include/: zh_wifi.h
main/: CMakeLists.txt  zh_gateway_esp32.c
